--- a/style.css
+++ b/style.css
@@ -21,29 +21,50 @@ body {
     filter: brightness(1.2);
   }
   
-  #keyboard-visualizer {
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    gap: 10px;
+  #piano {
+    position: relative;
+    width: fit-content;
+    margin: auto;
   }
   
-  #keyboard-visualizer span {
+  #white-keys span {
+    display: inline-block;
+    width: 40px;
+    height: 150px;
+    background: white;
+    border: 1px solid #999;
+    box-sizing: border-box;
+  }
+  
+  #black-keys {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    padding-left: 20px;
+    gap: 30px;
+    z-index: 10;
+  }
+  
+  #black-keys .gap {
+    width: 40px;
+  }
+  
+  #black-keys span {
     display: inline-block;
     width: 30px;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    border: 2px solid #555;
-    border-radius: 5px;
-    background-color: #eee;
-    font-family: monospace;
-    font-size: 1.2em;
-    transition: background-color 0.2s, transform 0.1s;
+    height: 90px;
+    background: black;
+    margin-left: -15px;
+    margin-right: -15px;
+    z-index: 11;
   }
   
-  #keyboard-visualizer span.active {
-    background-color: #ffcc00;
-    transform: scale(1.2);
+  #white-keys span.active {
+    background-color: #ffe66d;
+  }
+  
+  #black-keys span.active {
+    background-color: #ffc107;
   }
   
