--- a/style.css
+++ b/style.css
@@ -21,50 +21,52 @@ body {
     filter: brightness(1.2);
   }
   
-  #piano {
+  .keyboard {
     position: relative;
-    width: fit-content;
-    margin: auto;
+    width: 600px;
+    margin: 40px auto;
   }
   
-  #white-keys span {
-    display: inline-block;
-    width: 40px;
-    height: 150px;
-    background: white;
-    border: 1px solid #999;
-    box-sizing: border-box;
-  }
-  
-  #black-keys {
-    position: absolute;
-    top: 0;
-    left: 0;
+  .white-keys {
     display: flex;
-    padding-left: 20px;
-    gap: 30px;
-    z-index: 10;
   }
   
-  #black-keys .gap {
-    width: 40px;
+  .white-key {
+    width: 60px;
+    height: 200px;
+    background: white;
+    border: 1px solid black;
+    box-sizing: border-box;
+    text-align: center;
+    line-height: 200px;
+    font-weight: bold;
+    user-select: none;
+  }
+
+  
+  
+  #keyboard-visualizer {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
   }
   
-  #black-keys span {
+  #keyboard-visualizer span {
     display: inline-block;
     width: 30px;
-    height: 90px;
-    background: black;
-    margin-left: -15px;
-    margin-right: -15px;
-    z-index: 11;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border: 2px solid #555;
+    border-radius: 5px;
+    background-color: #eee;
+    font-family: monospace;
+    font-size: 1.2em;
+    transition: background-color 0.2s, transform 0.1s;
   }
   
-  #white-keys span.active {
-    background-color: #ffe66d;
+  #keyboard-visualizer span.active {
+    background-color: #ffcc00;
+    transform: scale(1.2);
   }
-  
-  #black-keys span.active {
-    background-color: #ffc107;
-  }
-  
